# masteriales

./: =1.14.0  pyproject.toml  test_model.py
pytorchexample/: client_app.py  generate_rotated_mnist.py  requirements.txt  run_flower.py  server_app_fedavg.py  server_app_fednova.py  server_app_fedprox.py  task.py
pytorchexample/data/rotated_mnist/: client_0_test.pt  client_0_val.pt  client_1_test.pt  client_1_val.pt  client_2_test.pt  client_2_val.pt  client_3_test.pt  client_3_val.pt  client_4_test.pt  client_4_val.pt  client_5_test.pt  client_5_val.pt  client_6_test.pt  client_6_val.pt  client_7_test.pt  client_7_val.pt  client_8_test.pt  client_8_val.pt  client_9_test.pt  client_9_val.pt
saved_models/fedavg/: global_parameters_round_10.pkl  global_parameters_round_15.pkl  global_parameters_round_6.pkl
saved_models/fednova/: global_parameters_round_10.pkl  global_parameters_round_15.pkl  global_parameters_round_6.pkl
saved_models/fedprox/: global_parameters_round_10.pkl  global_parameters_round_15.pkl  global_parameters_round_6.pkl
