[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "pytorchexample"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [ "flwr[simulation]>=1.14.0", "flwr-datasets[vision]>=0.3.0", "torch==2.2.1", "torchvision==0.17.1", "toml",]

[tool.flwr.app]
publisher = "flwrlabs"



[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.app.components]
# serverapp = "pytorchexample.server_app_fedavg:app"  # Ajout de cette ligne pour éviter l'erreur
serverapp = "pytorchexample.server_app_fednova:app"
# serverapp = "pytorchexample.server_app_fedprox:app"
fedavg_serverapp = "pytorchexample.server_app_fedavg:app"
fednova_serverapp = "pytorchexample.server_app_fednova:app"
fedprox_serverapp = "pytorchexample.server_app_fedprox:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 6
fraction-evaluate = 0.5 # 50% des clients évaluent le modèle après chaque round
fraction-fit = 1.0 # tous les clients disponibles participent à l'entraînement
min-fit-clients = 2 # Au moins 2 clients doivent réussir l'entraînement
min-available-clients = 2 # Au moins 2 clients doivent être en ligne pour démarrer
local-epochs = 1
learning-rate = 0.1
batch-size = 32

[tool.flwr.federations.local-simulation.options]
num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu.options]
num-supernodes = 10

[tool.hatch.build.targets.wheel]
packages = [ ".",]

[tool.flwr.federations.local-simulation-gpu.options.backend.client-resources]
num-cpus = 2
num-gpus = 0.2
